--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "basquiat-figma-plugin",
   "version": "0.0.1",
   "description": "Agent for building Figma Design files.",
-  "main": "dist/code.js",
+  "main": "dist/plugin.js",
   "scripts": {
     "build": "npm run build:ui && npm run build:code",
     "build:ui": "node esbuild.ui.js",
-    "build:code": "esbuild src/code.ts --bundle --outfile=dist/code.js --target=es2017",
+    "build:code": "esbuild src/plugin.ts --bundle --outfile=dist/plugin.js --target=es2017",
     "watch": "npm run watch:ui & npm run watch:code",
     "watch:ui": "node esbuild.ui.js --watch",
-    "watch:code": "esbuild src/code.ts --bundle --outfile=dist/code.js --target=es2017 --watch",
+    "watch:code": "esbuild src/plugin.ts --bundle --outfile=dist/plugin.js --target=es2017 --watch",
     "dev": "npm run watch"
   },
   "keywords": [
@@ -21,15 +21,15 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@figma/plugin-typings": "^1.97.0",
-    "@tsconfig/svelte": "^5.0.2",
-    "esbuild": "^0.19.11",
-    "esbuild-svelte": "^0.8.0",
-    "svelte": "^4.2.8",
-    "svelte-check": "^3.6.2",
-    "svelte-preprocess": "^5.1.3",
-    "tslib": "^2.6.2",
-    "typescript": "^5.3.3",
+    "@figma/plugin-typings": "^1.121.0",
+    "@tsconfig/svelte": "^5.0.6",
+    "esbuild": "^0.27.2",
+    "esbuild-svelte": "^0.9.4",
+    "svelte": "^5.46.0",
+    "svelte-check": "^4.3.5",
+    "svelte-preprocess": "^6.0.3",
+    "tslib": "^2.8.1",
+    "typescript": "^5.9.3",
     "@anthropic-ai/sdk": "^0.71.2",
     "zod": "^4.2.1"
   }
