--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,6 @@
     "noEmit": true,
     "types": ["@figma/plugin-typings"]
   },
-  "include": ["src/code.ts", "src/executor.ts"],
+  "include": ["src/plugin.ts", "src/plugincommandsexecutor.ts", "src/common.ts"],
   "exclude": ["node_modules", "dist"]
 }
