--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "svelte-preprocess": "^6.0.3",
     "tslib": "^2.8.1",
     "typescript": "^5.9.3",
-    "zod": "^4.2.1"
+    "zod": "^4.2.1",
+    "@google/genai": "1.34.0"
   }
 }
